k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s-backend
  namespace: staging
spec:
  selector:
    matchLabels:
      app: s-backend
  replicas: 5
  template:
    metadata:
      labels:
        app: s-backend
    spec:
      containers:
      - name: s-backend
        image: k/s-backend:gcp
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
