k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s-backend-service
  namespace: staging
spec:
  selector:
    app: s-backend
  ports:
  - protocol: TCP
    port: 3000
  type: LoadBalancer
