k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s-backend-ingress
  namespace: staging
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - api.s.app
      secretName: certificate-secret
  rules:
  - host: api.s.app
    http:
      paths: 
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: s-backend-service
            port:
              number: 3000
